fixed up the way the haunt cards show. still need to fix container overlap with footer

--- a/public/stylesheets/haunts.css
+++ b/public/stylesheets/haunts.css
@@ -30,6 +30,8 @@ h2 {
 }
 
 .hauntCard {
+  flex: 1 0 21%; /* explanation below */
+  margin: 5px;
   padding: 5px;
   gap: 1px;
 }
